--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/marked": "^1.2.1",
     "core-js": "^3.6.5",
     "element-plus": "^1.0.1-beta.17",
+    "marked": "^1.2.7",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
