--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "prismjs": "^1.22.0",
     "vue": "^3.0.0",
     "vue-axios": "^3.2.0",
+    "vue-class-component": "^7.2.6",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
   },
