--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "element-plus": "^1.0.1-beta.17",
+    "lodash": "^4.17.20",
     "marked": "^1.2.7",
     "prismjs": "^1.22.0",
     "vue": "^3.0.0",
     "vue-axios": "^3.2.0",
-    "vue-class-component": "^7.2.6",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
   },
